feat: adds meta tags for link sharing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="title" property="og:title" content="MogLab" />
+    <meta name="type" property="og:type" content="website" />
+    <meta name="image" property="og:image" content="/preview.png" />
+    <meta name="url" property="og:url" content="https://moglab.netlify.app" />
+    <meta name="description" property="og:description" content="A comunidade científica descomplicada!" />
+    <meta name="description" content="A comunidade científica descomplicada!" />
     <link rel="icon" type="image/svg+xml" href="/img/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MogLab</title>
